--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
             <div class="col-6">
               <h2 class="text-center display-2 mt-4" id="txt-bmi"></h2>
+
+              <h3 class="text-center display-4 mt-4" id="txt-remark"></h2>
                 
             </div>
         </div>
