--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           BMI-Calculator
         </h1>
         <div class="row">
-            <div class="col-6">
+            <div class="col-md-6">
               <form>
                 <label for="txt-weight" class="form-label mt-4">Enter your weight in kg</label>
                 <input type="text" class="form-control" placeholder="Weight in Kg" id="txt-weight">
@@ -29,7 +29,7 @@
               </form>    
             </div>
 
-            <div class="col-6">
+            <div class="col-md-6">
               <h2 class="text-center display-2 mt-4" id="txt-bmi"></h2>
 
               <h3 class="text-center display-4 mt-4" id="txt-remark"></h2>
