--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
                 <label for="txt-height" class="form-label mt-4">Enter your height in cm</label>
                 <input type="text" class="form-control" placeholder="Height in cm" id="txt-height">
                
-                <button type="button" class="w-100 btn btn-warning mt-4 " onClick="calculateBMI()">
-                  Calculate
-                </button>
+                <button type="button" class="w-100 btn btn-warning mt-4 " onClick="calculateBMI()">Calculate</button>
               </form>    
             </div>
 
             <div class="col-md-6">
               <h2 class="text-center display-2 mt-4" id="txt-bmi"></h2>
-
               <h3 class="text-center display-4 mt-4" id="txt-remark"></h2>
                 
             </div>
